crates/tokmd-cockpit/tests/snapshots/snapshot_w45__snapshot_cockpit_comment_with_contracts.snap
---
source: crates/tokmd-cockpit/tests/snapshot_w45.rs
expression: comment
---
## Glass Cockpit Summary

- **3 files changed**, +110/-35
- **Health**: 80/100 (B)
- **Risk**: low (20/100)

**Contract changes**:
- API contract changed
- CLI contract changed
- Schema contract changed
- 2 breaking indicator(s)

**Evidence gates**: Pass
- **Evidence availability**: 0 available, 0 degraded, 0 stale, 1 skipped, 5 unavailable, 0 missing

**Next steps**:
- [ ] Proceed with reviewer sign-off
- [ ] Confirm breaking changes are documented

**Priority review items**:
- crates/tokmd/src/commands/new_cmd.rs (100 lines changed)
