crates/tokmd-cockpit/tests/snapshots/snapshot_w45__snapshot_cockpit_md_empty_pr.snap
---
source: crates/tokmd-cockpit/tests/snapshot_w45.rs
expression: md
---
## Glass Cockpit

### Summary

|Metric|Current|
|---|---:|
|Files Changed|0|
|Insertions|0|
|Deletions|0|
|Net Lines|0|
|Code Health Score|100/100|
|Risk Score|0/100|
|Test Ratio|0.00|

### Change Surface

- **Files changed**: 0
- **Insertions**: 0
- **Deletions**: 0
- **Net lines**: 0
- **Churn velocity**: 0.0

### Composition

- **Code**: 0.0%
- **Test**: 0.0%
- **Docs**: 0.0%
- **Config**: 0.0%
- **Test ratio**: 0.00

### Contracts

- **API changed**: No
- **CLI changed**: No
- **Schema changed**: No
- **Breaking indicators**: 0

### Code Health

- **Score**: 100/100
- **Grade**: A
- **Large files touched**: 0
- **Average file size**: 0
- **Complexity indicator**: Low

### Risk

- **Level**: low
- **Score**: 0/100

### Evidence Gates

- **Overall status**: Pass
- **Mutation**: Skipped (killed: 0, survivors: 0)

### Review Plan

No review items.
