crates/tokmd-cockpit/tests/snapshots/snapshot_w45__snapshot_cockpit_md_with_failed_gates.snap
---
source: crates/tokmd-cockpit/tests/snapshot_w45.rs
expression: md
---
## Glass Cockpit

### Summary

|Metric|Current|
|---|---:|
|Files Changed|1|
|Insertions|50|
|Deletions|10|
|Net Lines|40|
|Code Health Score|80/100|
|Risk Score|20/100|
|Test Ratio|0.00|

### Change Surface

- **Files changed**: 1
- **Insertions**: 50
- **Deletions**: 10
- **Net lines**: 40
- **Churn velocity**: 0.0

### Composition

- **Code**: 100.0%
- **Test**: 0.0%
- **Docs**: 0.0%
- **Config**: 0.0%
- **Test ratio**: 0.00

### Contracts

- **API changed**: Yes
- **CLI changed**: No
- **Schema changed**: No
- **Breaking indicators**: 1

### Code Health

- **Score**: 80/100
- **Grade**: B
- **Large files touched**: 0
- **Average file size**: 60
- **Complexity indicator**: Low

### Risk

- **Level**: low
- **Score**: 20/100

### Evidence Gates

- **Overall status**: Fail
- **Mutation**: Fail (killed: 15, survivors: 2)

### Review Plan

- **src/lib.rs** (priority: 2)
  - Reason: API surface changed; 60 lines changed
  - Complexity: 1
  - Lines changed: 60
