crates/tokmd-cockpit/tests/snapshots/snapshot_w45__snapshot_cockpit_sections_multi_file.snap
---
source: crates/tokmd-cockpit/tests/snapshot_w45.rs
expression: sections
---
<!-- SECTION:COCKPIT -->

## Glass Cockpit

**Base**: main
**Head**: feature-branch

**Change Surface**:
- Files: 3
- Insertions: 153
- Deletions: 41

**Composition**:
- Code: 33.3%
- Test: 33.3%
- Docs: 0.0%
- Config: 33.3%

**Contracts**:
- API: Yes
- CLI: No
- Schema: No

**Health**: 80/100 (B)
**Risk**: low (20/100)

<!-- SECTION:REVIEW_PLAN -->

## Review Plan

- src/lib.rs (priority: 2)
- tests/test_it.rs (priority: 2)
- Cargo.toml (priority: 3)

<!-- SECTION:RECEIPTS -->

## Receipts

Full receipt data available in JSON format.
